--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,9 @@ var/
 .installed.cfg
 *.egg
 DRP/.pylint.d/
+DRP/others/
+DRP/my_class.py
+DRP/test.py
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
