--- a/.gitignore
+++ b/.gitignore
@@ -24,8 +24,10 @@ var/
 *.egg
 DRP/.pylint.d/
 DRP/others/
-DRP/my_class.py
-DRP/test.py
+# DRP/my_class.py
+# DRP/test.py
+DRP/~$demand_data.xlsx
+
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
